--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 bytemuck = "1.23.0"
+egui = "0.31.1"
+egui-wgpu = "0.31.1"
+egui-winit = "0.31.1"
 env_logger = "0.11.8"
 pollster = "0.4.0"
 wgpu = "25.0.0"
