--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ egui = "0.31.1"
 egui-wgpu = "0.31.1"
 egui-winit = "0.31.1"
 env_logger = "0.11.8"
+glam = "0.30.3"
 pollster = "0.4.0"
 wgpu = "25.0.0"
 winit = "0.30.10"
